file hosting has been added, createCurrentWeather was created

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/weaterApp.scss">
 
     <script src="index.js" defer type="module"></script>
+
 </head>
 
 <body>
@@ -24,31 +25,7 @@
         <main class="weatherApp_main">
             <section id="MAIN_CURRENT" class="main_section main_current">
                 <h3 id="MAIN_CURRENT_ALERT" class="main_current_alert">Przykładowy alert RCB w Polsce</h3>
-                <div id="MAIN_CURRENT_WEATHER" class="current_weather">
-                    <div class="current_weather_block">
-                        <h2>Now</h2>
-                        <img src="assets/day/119.png">
-                        <h2>26°</h2>
-                    </div>
-                    <div class="current_weather_block">
-                        <h2>5:56<span class="time_mode">AM</span></h2>
-                        <img src="assets/day/182.png">
-                        <h2>Sunrise</h2>
-                    </div>
-                    <div class="current_weather_block">
-                        <h2>6<span class="time_mode">AM</span></h2>
-                        <img src="assets/day/230.png">
-                        <h2>26°</h2>
-                    </div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                    <div class="current_weather_block"></div>
-                </div>
+                <div id="MAIN_CURRENT_WEATHER" class="current_weather"></div>
             </section>
             <section id="MAIN_FORECAST" class="main_section main_forecast">lewy dół</section>
             <section id="MAIN_AIRQUALITY" class="main_section main_airquality">prawy dół</section>
