Async header added, restructured code

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
     <div id="weatherApp">
         <header class="weatherApp_header">
-            <h1 id="HEADER_CITY" class="header_title">Poland</h1>
-            <h2 id="HEADER_TEMP" class="header_title">26</h2>
-            <h3 id="HEADER_WEATHER" class="header_title">Zachmurzenie</h3>
-            <h4 id="HEADER_HL" class="header_title">H:48° L:26°</h4>
+            <h1 id="HEADER_CITY" class="header_title"></h1>
+            <h2 id="HEADER_TEMP" class="header_title"></h2>
+            <h3 id="HEADER_WEATHER" class="header_title"></h3>
+            <h4 id="HEADER_HL" class="header_title"></h4>
         </header>
         <main class="weatherApp_main">
             <section id="MAIN_CURRENT" class="main_section main_current">
-                <h3 id="MAIN_CURRENT_ALERT" class="main_current_alert">Przykładowy alert RCB w Polsce</h3>
+                <h3 id="MAIN_CURRENT_ALERT" class="main_current_alert">Brak aktywnych alertów RCB</h3>
                 <div id="MAIN_CURRENT_WEATHER" class="current_weather"></div>
             </section>
             <section id="MAIN_FORECAST" class="main_section main_forecast">lewy dół</section>
