--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
                 <div id="MAIN_CURRENT_WEATHER" class="current_weather"></div>
             </section>
             <section id="MAIN_FORECAST" class="main_section main_forecast">lewy dół</section>
-            <section id="MAIN_AIRQUALITY" class="main_section main_airquality">prawy dół</section>
+            <section id="MAIN_AIRQUALITY" class="main_section main_airquality">
+                <h2><img src="./assets/air.svg">AIR QUALITY (co2)</h2>
+                <h3 id="AIR_VALUE"></h3>
+                <h4 id="AIR_DESC"></h4>
+                <div><div class="airCondition">
+                    <div id="AIR_DOT" class="air_dot"></div>
+                </div></div>
+            </section>
             <section id="MAIN_MAP" class="main_section main_map"></section>
         </main>
     </div>
