--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/weaterApp.scss">
 
     <script src="index.js" defer type="module"></script>
@@ -16,27 +17,29 @@
 
 <body>
     <div id="weatherApp">
-        <header class="weatherApp_header">
-            <h1 id="HEADER_CITY" class="header_title"></h1>
-            <h2 id="HEADER_TEMP" class="header_title"></h2>
-            <h3 id="HEADER_WEATHER" class="header_title"></h3>
-            <h4 id="HEADER_HL" class="header_title"></h4>
+        <header class="weatherApp__header">
+            <h1 id="HEADER_CITY"></h1>
+            <h2 id="HEADER_TEMP"></h2>
+            <h3 id="HEADER_WEATHER"></h3>
+            <h4 id="HEADER_HL"></h4>
         </header>
-        <main class="weatherApp_main">
-            <section id="MAIN_CURRENT" class="main_section main_current">
-                <h3 id="MAIN_CURRENT_ALERT" class="main_current_alert">Brak aktywnych alertów RCB</h3>
-                <div id="MAIN_CURRENT_WEATHER" class="current_weather"></div>
+        <main class="weatherApp__mainSection">
+            <section id="MAIN_CURRENT" class="mainSection mainSection__current">
+                <h3 id="MAIN_CURRENT_ALERT" class="current__alert">Brak aktywnych alertów RCB</h3>
+                <div id="MAIN_CURRENT_WEATHER" class="current__weather"></div>
             </section>
-            <section id="MAIN_FORECAST" class="main_section main_forecast">lewy dół</section>
-            <section id="MAIN_AIRQUALITY" class="main_section main_airquality">
-                <h2><img src="./assets/air.svg">AIR QUALITY (co2)</h2>
+            <section id="MAIN_FORECAST" class="mainSection mainSection__forecast">lewy dół</section>
+            <section id="MAIN_AIRQUALITY" class="mainSection mainSection__airquality">
+                <h2><img src="./assets/air.svg">AIR QUALITY (co<sub>2</sub>)</h2>
                 <h3 id="AIR_VALUE"></h3>
                 <h4 id="AIR_DESC"></h4>
-                <div><div class="airCondition">
-                    <div id="AIR_DOT" class="air_dot"></div>
-                </div></div>
+                <div>
+                    <div class="airquality__ratio">
+                        <div id="AIR_DOT" class="ratio__dot"></div>
+                    </div>
+                </div>
             </section>
-            <section id="MAIN_MAP" class="main_section main_map"></section>
+            <section id="MAIN_MAP" class="mainSection main_map"></section>
         </main>
     </div>
 </body>
