forecastbox dynamic ratio added

--- a/index.html
+++ b/index.html
@@ -33,21 +33,8 @@
 
 
             <section class="mainSection mainSection__forecast">
-                <h2><img src="./assets/calendar.svg">10-DAY FORECAST</h2>
-                <div class="forecast__container">
-                    <div class="forecast__container__box">
-                        <img src="./assets/day/113.png">
-                        <div class="forecast__temp">
-                            <h3>18</h3>
-                            <div class="forecast__ratio">
-                                <div class="forecast__ratio__range"></div>
-                            </div>
-                            <h3>23</h3>
-                        </div>
-                        <h2>Today</h2>
-                    </div>
-
-                </div>
+                <h2><img src="./assets/calendar.svg">FORECAST</h2>
+                <div id="forecast-container"  class="forecast__container"></div>
             </section>
 
 
