[FORECAST,TODAY] now using innerHTML to generate boxes, [ALL] added moon images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             </section>
 
 
-            <section id="MAIN_MAP" class="mainSection main_map"></section>
+            <section id="MAIN_MAP" class="mainSection main_map">
+                
+            </section>
         </main>
     </div>
 </body>
